[gd_scene load_steps=66 format=2]

[ext_resource path="res://assets/Karakter/karakter 1/run (12).png" type="Texture" id=1]
[ext_resource path="res://assets/Karakter/karakter 1/run (11).png" type="Texture" id=2]
[ext_resource path="res://assets/Karakter/karakter 1/run (6).png" type="Texture" id=3]
[ext_resource path="res://assets/Karakter/karakter 1/run (3).png" type="Texture" id=4]
[ext_resource path="res://assets/Karakter/karakter 1/run (4).png" type="Texture" id=5]
[ext_resource path="res://assets/Karakter/karakter 1/run (7).png" type="Texture" id=6]
[ext_resource path="res://assets/Karakter/karakter 1/run (8).png" type="Texture" id=7]
[ext_resource path="res://assets/Karakter/karakter 1/run (9).png" type="Texture" id=8]
[ext_resource path="res://assets/Karakter/karakter 1/run (5).png" type="Texture" id=9]
[ext_resource path="res://assets/Karakter/karakter 1/run (10).png" type="Texture" id=10]
[ext_resource path="res://assets/Karakter/karakter 1/idle.png" type="Texture" id=11]
[ext_resource path="res://assets/Karakter/karakter 1/run (1).png" type="Texture" id=12]
[ext_resource path="res://assets/Karakter/karakter 1/run (2).png" type="Texture" id=13]
[ext_resource path="res://Karakter/karakter1_movement.gd" type="Script" id=14]
[ext_resource path="res://assets/Karakter/karakter 1/jump (1).png" type="Texture" id=15]
[ext_resource path="res://assets/Karakter/karakter 1/jump (3).png" type="Texture" id=16]
[ext_resource path="res://assets/Karakter/karakter 1/jump (2).png" type="Texture" id=17]
[ext_resource path="res://assets/Karakter/karakter 1/kneel (5).png" type="Texture" id=18]
[ext_resource path="res://assets/Karakter/karakter 1/kneel (1).png" type="Texture" id=19]
[ext_resource path="res://assets/Karakter/karakter 1/kneel (3).png" type="Texture" id=20]
[ext_resource path="res://assets/Karakter/karakter 1/kneel (2).png" type="Texture" id=21]
[ext_resource path="res://assets/Karakter/karakter 1/kneel (4).png" type="Texture" id=22]
[ext_resource path="res://UI/PlayerBar/PlayerBar.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/Karakter/karakter 1/shoot (4).png" type="Texture" id=24]
[ext_resource path="res://assets/Karakter/karakter 1/shoot (2).png" type="Texture" id=25]
[ext_resource path="res://assets/Karakter/karakter 1/shoot (1).png" type="Texture" id=26]
[ext_resource path="res://assets/Karakter/karakter 1/shoot (5).png" type="Texture" id=27]
[ext_resource path="res://assets/Karakter/karakter 1/shoot (3).png" type="Texture" id=28]
[ext_resource path="res://Karakter/peluru/gun.gd" type="Script" id=29]
[ext_resource path="res://assets/Karakter/karakter 1/die (2).png" type="Texture" id=30]
[ext_resource path="res://assets/Karakter/karakter 1/die (3).png" type="Texture" id=31]
[ext_resource path="res://assets/Karakter/karakter 1/die (1).png" type="Texture" id=32]
[ext_resource path="res://assets/Karakter/karakter 1/die (4).png" type="Texture" id=33]
[ext_resource path="res://assets/Karakter/karakter 1/die (5).png" type="Texture" id=34]
[ext_resource path="res://assets/button/Pixel Buttons/Previous_Pushed.png" type="Texture" id=35]
[ext_resource path="res://assets/button/Pixel Buttons/Previous_Idle.png" type="Texture" id=36]
[ext_resource path="res://assets/button/Pixel Buttons/Next_Pushed.png" type="Texture" id=37]
[ext_resource path="res://assets/button/Pixel Buttons/Next_Idle.png" type="Texture" id=38]
[ext_resource path="res://assets/button/Pixel Buttons/shoot_pushed.png" type="Texture" id=39]
[ext_resource path="res://assets/button/Pixel Buttons/shoot.png" type="Texture" id=40]
[ext_resource path="res://assets/button/Pixel Buttons/jump_pressed.png" type="Texture" id=41]
[ext_resource path="res://assets/button/Pixel Buttons/jump_idle.png" type="Texture" id=42]
[ext_resource path="res://assets/button/Pixel Buttons/Pause_Idle.png" type="Texture" id=43]
[ext_resource path="res://assets/button/Pixel Buttons/Pause_Pushed.png" type="Texture" id=44]
[ext_resource path="res://assets/Karakter/karakter 1/walk (6).png" type="Texture" id=45]
[ext_resource path="res://assets/Karakter/karakter 1/walk (2).png" type="Texture" id=46]
[ext_resource path="res://assets/Karakter/karakter 1/walk (5).png" type="Texture" id=47]
[ext_resource path="res://assets/Karakter/karakter 1/walk (3).png" type="Texture" id=48]
[ext_resource path="res://assets/Karakter/karakter 1/walk (1).png" type="Texture" id=49]
[ext_resource path="res://assets/Karakter/karakter 1/walk (4).png" type="Texture" id=50]
[ext_resource path="res://assets/Karakter/karakter 1/walk (7).png" type="Texture" id=51]
[ext_resource path="res://assets/Karakter/karakter 1/walk (8).png" type="Texture" id=52]
[ext_resource path="res://assets/font/SHPinscher-Regular.otf" type="DynamicFontData" id=53]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 18 ) ],
"loop": true,
"name": "kneel",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "running",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 27 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 50 ), ExtResource( 47 ), ExtResource( 45 ), ExtResource( 51 ), ExtResource( 52 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 38.28

[sub_resource type="CircleShape2D" id=4]
radius = 38.31

[sub_resource type="CircleShape2D" id=6]
radius = 36.9

[sub_resource type="CircleShape2D" id=5]
radius = 38.19

[sub_resource type="CircleShape2D" id=7]
radius = 36.04

[sub_resource type="Animation" id=8]
resource_name = "HitAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("mainKarakter:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.0509804, 0.0509804, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LabelHealthMonster:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, -49 ), Vector2( -10, -80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LabelHealthMonster:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "HitBoss"
tracks/0/type = "value"
tracks/0/path = NodePath("mainKarakter:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LabelHealthboss:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, -54 ), Vector2( -10, -70 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LabelHealthboss:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 5, 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "heal"
tracks/0/type = "value"
tracks/0/path = NodePath("mainKarakter:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0156863, 1, 0.329412, 0.396078 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 18.5, 29 )

[sub_resource type="DynamicFont" id=12]
size = 15
font_data = ExtResource( 53 )

[node name="karakter1" type="KinematicBody2D"]
position = Vector2( -1, -38 )
collision_layer = 257
collision_mask = 257
script = ExtResource( 14 )

[node name="mainKarakter" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 0.591667, 0.626147 )
frames = SubResource( 1 )
animation = "walk"
frame = 3
playing = true

[node name="gun" type="Position2D" parent="mainKarakter"]
position = Vector2( 32.1127, 14.3736 )
scale = Vector2( 1.69014, 1.59707 )
script = ExtResource( 29 )

[node name="Cooldown" type="Timer" parent="mainKarakter/gun"]
process_mode = 0
wait_time = 6.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 4 )
shape = SubResource( 2 )

[node name="TimerAnimation" type="Timer" parent="."]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PlayerBar" type="CanvasLayer" parent="."]

[node name="PlayerBar" parent="PlayerBar" instance=ExtResource( 23 )]
margin_left = 6.0
margin_top = 5.0
margin_right = -790.0
margin_bottom = -510.0

[node name="KarakterSound" type="AudioStreamPlayer" parent="."]
bus = "Game"

[node name="TimerSound" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_left = -1.0
margin_top = -38.0
margin_right = 39.0
margin_bottom = 2.0

[node name="Left" type="TouchScreenButton" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0.317647 )
position = Vector2( 82, 428 )
scale = Vector2( 1.094, 1.094 )
normal = ExtResource( 36 )
pressed = ExtResource( 35 )
shape = SubResource( 3 )
passby_press = true
action = "kiri"

[node name="Right" type="TouchScreenButton" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0.317647 )
position = Vector2( 215.722, 428 )
scale = Vector2( 1.094, 1.094 )
normal = ExtResource( 38 )
pressed = ExtResource( 37 )
shape = SubResource( 4 )
passby_press = true
action = "kanan"

[node name="jump" type="TouchScreenButton" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0.317647 )
position = Vector2( 735, 438 )
scale = Vector2( 1.42187, 1.29688 )
normal = ExtResource( 42 )
pressed = ExtResource( 41 )
shape = SubResource( 6 )
action = "Jump"

[node name="Fire" type="TouchScreenButton" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0.317647 )
position = Vector2( 854, 336 )
scale = Vector2( 1.60938, 1.73438 )
normal = ExtResource( 40 )
pressed = ExtResource( 39 )
shape = SubResource( 5 )
action = "shoot"

[node name="Pause" type="TouchScreenButton" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0.317647 )
position = Vector2( 922, 54 )
scale = Vector2( 0.7, 0.7 )
normal = ExtResource( 43 )
pressed = ExtResource( 44 )
shape = SubResource( 7 )
action = "pause"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HitAnim = SubResource( 8 )
anims/HitBoss = SubResource( 11 )
anims/heal = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DialogInteractionArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogInteractionArea"]
modulate = Color( 0.372549, 0, 0.537255, 1 )
position = Vector2( 1, 2 )
shape = SubResource( 10 )

[node name="LabelHealthboss" type="Label" parent="."]
margin_left = -10.0
margin_top = -70.0
margin_right = 11.0
margin_bottom = -51.0
rect_pivot_offset = Vector2( -154, 64 )
custom_colors/font_color = Color( 0.968627, 0.0627451, 0.0627451, 1 )
custom_fonts/font = SubResource( 12 )
text = "-30"
percent_visible = 0.0

[node name="LabelHealthMonster" type="Label" parent="."]
margin_left = -10.0
margin_top = -80.0
margin_right = 11.0
margin_bottom = -61.0
rect_pivot_offset = Vector2( -154, 64 )
custom_colors/font_color = Color( 0.968627, 0.0627451, 0.0627451, 1 )
custom_fonts/font = SubResource( 12 )
text = "-20"
percent_visible = 0.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
